RESOLVED FIXED105464
Lots of sticky tests failing in WK2
https://bugs.webkit.org/show_bug.cgi?id=105464
Summary Lots of sticky tests failing in WK2
Simon Fraser (smfr)
Reported 2012-12-19 14:07:17 PST
My recent sticky position changes caused all the CSS sticky ref tests to fail in WK2. See url.
Attachments
Patch (2.02 KB, patch)
2012-12-19 16:36 PST, Simon Fraser (smfr)
no flags
Patch (7.08 KB, patch)
2012-12-19 18:45 PST, Simon Fraser (smfr)
beidson: review+
Simon Fraser (smfr)
Comment 1 2012-12-19 14:08:14 PST
I think the issue is related to layer flushing and DrawingAreaImpl::forceRepaint(). That function doesn't do a flush right away if it hasn't received the message that the UI process is in compositing mode. And these tests enter compositing at page load, so we seem to have a race.
Simon Fraser (smfr)
Comment 2 2012-12-19 14:44:50 PST
New theory: InjectedBundlePage::resetAfterTest() in the web process is racing with snapshotting in the UI process and resetting the scroll position.
Simon Fraser (smfr)
Comment 3 2012-12-19 16:36:09 PST
Simon Fraser (smfr)
Comment 4 2012-12-19 18:21:35 PST
This patch altered the InternalSettings::Backup::restore behavior such that page->setCanStartMedia() was called with false before the test, breaking all media tests.
Simon Fraser (smfr)
Comment 5 2012-12-19 18:38:05 PST
canStartMedia save/restore was added for bug 93913.
Simon Fraser (smfr)
Comment 6 2012-12-19 18:45:00 PST
Simon Fraser (smfr)
Comment 7 2012-12-20 11:33:38 PST
Note You need to log in before you can comment on or make changes to this bug.