Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp
@@ -176,6 +176,8 @@ void InjectedBundle::didReceiveMessage(WKStringRef messageName, WKTypeRef messag
         resetLocalSettings();
         m_testRunner->removeAllWebNotificationPermissions();
 
+        page()->resetAfterTest();
+
         return;
     }
     if (WKStringIsEqualToUTF8CString(messageName, "CallAddChromeInputFieldCallback")) {
@@ -300,8 +302,6 @@ void InjectedBundle::done()
     WKBundlePostMessage(m_bundle, doneMessageName.get(), doneMessageBody.get());
 
     closeOtherPages();
-
-    page()->resetAfterTest();
 
     m_state = Idle;
 }
